Fixes for small screen devices, added resume
Bug Fixes:
- Fixed cropped resume and about components on smaller devices
- Resume headers vanshing on smaller devices
New Features:
- Added config file for dynamically setting content for about

--- a/src/Routes/transitions.css
+++ b/src/Routes/transitions.css
@@ -24,12 +24,14 @@
   transform: translateY(0);
   transition: all 300ms ease-in-out;
   z-index: 100;
+  overflow-y: auto;
 }
 .page > * {
   position: absolute;
   inset: 0;
   width: 100vw;
   height: 100vh;
+  overflow-y: auto;
 }
 
 .page {
